--- a/client/src/Components/Cards/Cards.module.css
+++ b/client/src/Components/Cards/Cards.module.css
@@ -1,8 +1,7 @@
 .cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1em;
     padding: 2em;
-    gap: 1em;
     border-radius: 10em;
 }
