--- a/client/src/Components/Card/Card.module.css
+++ b/client/src/Components/Card/Card.module.css
@@ -1,37 +1,55 @@
 .container {
     background-color: #2368bb;
-    /* background-color: rgba(182, 168, 168, 0.3); */
     border-radius: 20px;
-    border: 3px solid #9fd3c7;
-    width: 200px;
+    border: 3px solid #7FB800;
+    width: 230px;
     position: relative;
     transition: transform 0.3s ease-in-out;
-    /* padding: 10px; */
 }
 
 .img {
     border-radius: 20px;
     display: flex;
     align-items: flex;
+    margin-left: 10px;
+    margin-right: 10px;
     position: 0;
     top: 0;
     width: 200px;
     height: 200px;
-    border-bottom: 3px solid #72e2c8;
+    border-bottom: 3px solid #7FB800;
 }
 
 .detailBtn {
-    background-color: #385170;
-    border: none;
+    background-color: #FFB400;
+    border: solid 2px black;
     border-radius: 50px;
     cursor: pointer;
     margin-bottom: 10px;
+    margin-top: 10px;
     font-family: Sniglet, cursive;
-    color: #ececec;
+    color: #0f0e0e;
 }
 
 .detailBtn:hover {
     box-shadow:
         0 15px 10px rgba(0, 0, 0, 0.9),
         0 -2px 10px rgba(0, 0, 0, 0.9);
+}
+
+.text_content{
+
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.title{
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: center;
+    text-decoration: underline;
+}
+.text_content h4{
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: center;
 }
